CLear architectoyry
